[package]
name = "maersk"
version = "0.1.0"
authors = ["JonasAgger <mail@jonasagger.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "blocking", "gzip"] }
bytes = "1.3.0"
tokio = { version = "1.23.0", features = ["full"] }
libc = "0.2.103"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.59"
flate2 = "1.0.25"
tar = "0.4.38"
nix = { version = "0.27.1", features = ["sched", "fs", "hostname", "mount"] }